--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.9.0",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
   },
